2009-07-16  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing pthread link for libulockmgr.  Patch by  Petr Salinger

2009-06-16  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing fuse_reply_bmap to versionscript.  Debian
	Bug#531329.  Reported by Goswin Brederlow

2009-05-27  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: Don't set 'aborted' flag on a request if it's
	interrupted (commit a131de0a).  Reported and tested by John Haxby

	* Don't call forget_node() if the lookup was negative and write()
	for the reply returned ENOENT.  Reported by John Haxby

2008-07-25  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.4

2008-07-25  Miklos Szeredi <miklos@szeredi.hu>

	* Update kernel module to compile with 2.6.26

2008-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing pthread_mutex_destroy in error path of
	fuse_lib_opendir().  Patch by Szabolcs Szakacsits

2008-02-19  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.3

2008-02-13  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing bdi_init() and bdi_destroy() calls for 2.6.24
	kernel.  Lack of bdi_init() could cause write to hang.  Report
	forwarded by Szakacsits Szabolcs from the NTFS-3G forum.

2008-02-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- string formatting fixes
	- exit if mounting has failed
	  (in FreeBSD a mount failure is not critical per se, as the daemon
	  still could be mounted externally, but waiting for such an event
	  is more confusing than fruitful)
	- ditch the kvm(8) stuff and simply use forced unmount which just
	  won't block
	- prettify option specifications
	- add "-onosync_unmount" kernel option

2008-01-07  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- refine device closing in a race-free way
	- add support for "-osubtype" on FreeBSD

	* makeconf.sh: make it work under FreeBSD

2008-01-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c: close device before unmount
	(cf. lib/mount.c rev. 1.43) and fix some warnings 
